--- a/css/style.css
+++ b/css/style.css
@@ -83,15 +83,24 @@ nav ul{
   width: 128px;
 }
 .he-right{
-  margin-block: auto;
+  margin-block: 0;
+}
+.he-right-0{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-end;
+  justify-content: flex-start;
+  max-width: 200px;
 }
 .he-inner{
   align-items: center;
 }
-.he-inner-1{
+.he-inner-1 {
   display: flex;
   justify-content: space-between;
-  padding-inline: 30px;
+  align-items: center; 
+  flex-wrap: wrap;
 }
 .he-inner-2{
   background-color: #6d238d;
@@ -235,8 +244,15 @@ mark{
   display:none;
 }
 
-.menu-ham{
-  display:none;
+.menu-ham {
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  z-index: 10001;
 }
 .he-nav-ham{
   display:none;
@@ -252,23 +268,36 @@ mark{
 }
 
 @media screen and (max-width:768px) {
- 	/*　画面サイズが650px以下の場合ここの記述が適用される　*/
-  .he-right{
-    margin: 0;
-    padding: 0;
-    position:absolute;
-    top: 37px;
-    right: 90px;
+   .he-inner-1 {
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 10px;
   }
+  .he-right-0{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+  .he-right{
+    order: 1; 
+    margin-left: auto; 
+  }
+  .he-left {
+    order: 1;
+  }
+
   .sub-1{
   max-width: 350px;
   }
   .message-inner{
     max-width: 350px;
   }
-    .tra1,.tra1-name{
+  .tra1,.tra1-name{
   text-align: justify;
-}
+  }
   .tra1 img{
     display: block;
     float: none;
@@ -282,7 +311,6 @@ mark{
   text-align: center;
   display: block;
   }
-
   nav ul{
   display:inline-grid;
   column-gap: 1em;
@@ -298,11 +326,10 @@ mark{
   }
   .he-nav-2 li:nth-child(n+2){
     border-left:none;
-        border-top:1px white solid;
+    border-top:1px white solid;
   }
   .he-nav-2 li:nth-child(n+3){
     border-left:none;
-
   }
 
   .ham{
@@ -323,26 +350,24 @@ mark{
   transition: ease .4s;
   display: block;
 }
-  .menu-ham{
-    display:block;
-    width:40px;
-    height:40px;
-    position:relative;
-    z-index:10001;
-    cursor:pointer;
-    background:transparent;
-    border:none;
-    top:20px;
-    right:0px;
+  .menu-ham {
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    z-index: 10001;
   }
   .menu-ham span{
     display: block;
-    position:absolute;
-    left: 0;      
+    position: absolute;
+    left: 0;
     width: 100%;
-    height:3px;  
-    background-color: #000;
-    transition:all 0.3s ease;
+    height: 3px;
+    background-color: #000; 
+    transition: all 0.3s ease;
   }
 
   .menu-ham span:nth-child(1){
@@ -376,29 +401,27 @@ mark{
   text-align: justify;
   }
   .he-inner-3{
-  display:block;
-  position:relative;
-  min-height: 40px;
-}
+    display: block;
+    order: 2;
+    margin-left: auto;
+  }
   .he-nav-ham{
     position: fixed;
-    top:0;
-    left:50%;
-    width:80vw;
-    height:380px;
+    top: 0;
+    left: 50%;
+    width: 80vw;
+    height: 380px;
     background-color: #6d238d;
-    text-align: center;
-    z-index:10000;
+    z-index: 10000;
     margin-top: 50px;
-    transform: translate(-50%,-100%);
-    /*transform:translateY(-100%);*/
-    transition: transform 0.6s ease,opacity 0.5s ease;
-    opacity:0;
-    pointer-events:none;
-    display:flex;
-    align-items: center;
-    justify-content: center;
+    transform: translate(-50%, -100%);
+    transition: transform 0.6s ease, opacity 0.5s ease;
+    opacity: 0;
+    pointer-events: none;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .he-nav-ham ul{
     width:100%;
@@ -408,9 +431,8 @@ mark{
   }
   .he-nav-ham ul a{
     color: #ffffff;
+    text-decoration: none;
   }
-  
-  /**/
   nav ul{
   display:block;
   text-align: center;
@@ -420,7 +442,6 @@ mark{
     padding: 15px 0;
     border-top:1px solid #ccc;
     width:100%;
-    box-sizing: border-box;
     text-align:center;
   }
   .he-nav-ham li:first-child{
@@ -430,5 +451,22 @@ mark{
     transform:translate(-50%,0);
     opacity: 1;
     pointer-events: auto;
+  }
+}
+@media screen and (max-width: 460px) {
+  .he-inner-1 {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .he-right {
+    max-width: 100%;
+    white-space: normal;
+    text-align: center;
+  }
+  
+  .he-inner-3 {
+    margin-top: 10px;
   }
 }
